Outreach use final link for competitor analysis

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -218,7 +218,7 @@ DCR Comic launched the [dcrcomic.org](https://dcrcomic.org/) website hosting all
 
 @dezryth posted the first [update](https://scottrchristian.com/2020/02/15/dezryth-proposal-updates/) for his proposal for the month of January.
 
-Monde PR came on board and quickly [established](https://github.com/decredcommunity/pr/pull/7) project public relations goals, target audiences, key messages, credibility bullet points, documented key topics, performed a [competitor analysis](https://github.com/decredcommunity/pr/pull/8), documented all spokespeople, created key stories to pitch, and even began outreach, yielding a number of valuable placements:
+Monde PR came on board and quickly [established](https://github.com/decredcommunity/pr/pull/7) project public relations goals, target audiences, key messages, credibility bullet points, documented key topics, performed a [competitor analysis](https://github.com/decredcommunity/pr/blob/release/competitor-analysis.csv), documented all spokespeople, created key stories to pitch, and even began outreach, yielding a number of valuable placements:
 
 - An [article](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world) in Cointelegraph featuring @elian and @akinsawyerr's commentary on the adoption of blockchain around the world.
 - An [article](https://www.financemagnates.com/cryptocurrency/news/does-china-control-bitcoin-and-ethereum/) in Finance Magnates featuring @jy-p's commentary on the centralization of Bitcoin mining and consensus models.
