--- a/journal/202002.md
+++ b/journal/202002.md
@@ -4,10 +4,7 @@
 
 _Image: {caption: "$title by $author. $optional-description" for artwork, or just "$description" for photos}_
 
-{introduction, major news of the month ordered by impact, don't put any links here}
-
-* The fourth anniversary of the Decred genesis block arrived on Feb 8, and was celebrated around the world as attendees in at least 12 cities participated in the first #DecredGlobalMeetup!
-
+- The fourth anniversary of the Decred genesis block arrived on Feb 8, and was celebrated around the world as attendees in at least 11 cities participated in the first #DecredGlobalMeetup!
 - @Dustorf published a report on the project's marketing efforts in 2019, giving an in depth account of what was done, how the DCR was spent, what went well and what didn't - along with thoughts on how to advance in 2020.
 - Solid progress across all the major software repositories, with optimizations to dcrd, a big batch of DEX components completed, and the mobile apps ready to benefit from the new consensus rules and more efficient SPV.
 - The new decred.org site was released in early March, focusing on the key messages as determined by the community in 2019, and presenting them in a way which is accessible and aesthetically pleasing. 
@@ -59,7 +56,7 @@ Other improvements:
 
 [Politeia](https://github.com/decred/politeia): Backend changes:
 
-- sessions [moved](https://github.com/decred/politeia/pull/1113) to userdb to allow manual invalidation of sessions and also as a step to run multiple instances of politeiawww
+- sessions [moved](https://github.com/decred/politeia/pull/1113) to userdb to allow manual invalidation of sessions and also as a step to run multiple instances of politeiawww (for scalability and fault tolerance)
 - proposal [metadata](https://github.com/decred/politeia/pull/1110) necessary for RFP proposals added to the cache
 - StartVote v2 [merged](https://github.com/decred/politeia/pull/1088) (described in [December](201912.md#development))
 - added backend route to retrieve proposals by a [short token](https://github.com/decred/politeia/pull/1116) (this will allow shorter URLs in the GUI)
@@ -67,7 +64,7 @@ Other improvements:
 
 Frontend changes:
 
-- added [flat display](https://github.com/decred/politeiagui/pull/1781) mode for comments to help with spotting new comments easier without hunting them in the whole comment tree
+- added [flat display](https://github.com/decred/politeiagui/pull/1781) mode for comments to help with spotting new comments without hunting them in the whole comment tree
 - UI tweaks and performance optimizations
 
 [dcrpool](https://github.com/decred/dcrpool):
@@ -92,7 +89,7 @@ Frontend changes:
 - store all match/swap data in server [database](https://github.com/decred/dcrdex/pull/177) to allow the server to prove receipt of swap-related messages from clients
 - updated build and contributing [instructions](https://github.com/decred/dcrdex/pull/175)
 
-A total of 25 pull requests merged from 7 contributors adding 12K and deleting 3K lines of code ([commit summary](https://github.com/decred/dcrdex/compare/15d3021da853110baa02b24311b03e457b61be4a...94310f66c06fdf5ca31eeb80c9f6af7aecf4c31d)).
+A total of 25 pull requests merged from 7 contributors adding 12K and deleting 3K lines of code (commit summary [here](https://github.com/decred/dcrdex/compare/15d3021da853110baa02b24311b03e457b61be4a...94310f66c06fdf5ca31eeb80c9f6af7aecf4c31d)).
 
 [dcrandroid](https://github.com/decred/dcrandroid): Version 1.0.1 released on Google Play fixes several bugs and includes v1.5 modules to support the new consensus rules.
 
@@ -115,7 +112,7 @@ In development:
 
 [tinydecred](https://github.com/decred/tinydecred):
 
-- a lot of work was put to streamline test code and increase test coverage
+- streamlined test code and increased test coverage
 - RPC client [finished](https://github.com/decred/tinydecred/pull/73)
 - streamlined [error handling](https://github.com/decred/tinydecred/pull/81)
 
@@ -125,7 +122,7 @@ In development:
 - added [advice](https://github.com/decred/dcrdocs/pull/1068) how to run dcrd and dcrwallet as system services
 - [polished](https://github.com/decred/dcrdocs/pull/1064) LN docs
 
-[decred.org](https://github.com/decred/dcrweb): Mentions of Slack [removed](https://github.com/decred/dcrweb/pull/780), large design and content update (see Outreach section).
+[decred.org](https://github.com/decred/dcrweb): Mentions of Slack [removed](https://github.com/decred/dcrweb/pull/780), large design and content update (see Outreach section below).
 
 Other:
 
@@ -158,7 +155,7 @@ Community stats:
 
 In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,018 DCR and spent 12,622 DCR. Using February's daily average DCR/USD rate of $20.48, this is $267K received and $258K spent. At January's average daily rate of $18.00, the USD figure billed for work completed in that month is $227K. As of Mar 2, Treasury balance is 643,179 DCR ($11.6 million USD at $18).
 
-Our Network [issue 6](https://ournetwork.substack.com/p/our-network-issue-6) had an interesting chart with Treasury inflows and outflows. As of Jan 30, the Treasury has received a total of 939K DCR and spent 299K DCR.
+Our Network [issue 6](https://ournetwork.substack.com/p/our-network-issue-6) included a useful chart with Treasury inflows and outflows. As of Jan 30, the Treasury has received a total of 939K DCR and spent 299K DCR.
 
 In February there were 4 new [proposals](https://dcrdata.decred.org/proposals) submitted, and 5 started voting.
 
@@ -208,7 +205,7 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 On February 8th, Decred turned four, and the community celebrated the event with [#DecredGlobalMeetup](https://twitter.com/hashtag/DecredGlobalMeetup). Events took place in at least a dozen cities all across the world to celebrate the community and technology Decred has built. @Dustorf wrote [a blog](https://medium.com/@dlefebvr/on-saturday-february-8th-the-decred-blockchain-will-have-been-adding-blocks-for-4-years-17fe3038f3bf) and a [tweet thread](https://twitter.com/lefebvre_dustin/status/1225462426503696384) summarizing Decred's progress to date.
 
-@Dustorf published a [Marketing Report](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/) detailing all project marketing related expenses in 2019. The report includes an examination of what worked and what didn't, as well as prescriptions for next year. The three high level recommendations include: imagine what can be achieved socially using the Decred technology stack, break the bubble to expand Decred beyond those currently in crypto, and leverage the power of every individual within the community. The report calls for a decentralization of marketing efforts by geography. To that end, Latin America has already passed a proposal. The European proposal was made, but was rejected. It is expected that proposals for Brazil, United States, Canada, and Australia will be made in March. Since Decred's marketing has always been a subject of long debates, anybody who is interested in this domain is welcome to study the report and share their ideas in the corresponding [Reddit thread](https://www.reddit.com/r/decred/comments/fa70c3/decred_2019_marketing_report/).
+@Dustorf published a [Marketing Report](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/) detailing all project marketing related expenses in 2019. The report includes an examination of what worked and what didn't, as well as prescriptions for next year. The three high level recommendations include: imagine what can be achieved socially using the Decred technology stack, break the bubble to expand Decred beyond those currently in crypto, and leverage the power of every individual within the community. The report calls for a decentralization of marketing efforts by geography. To that end, Latin America has already passed a proposal. The European proposal was made, but was rejected. It is expected that proposals for Brazil, United States, Canada, and Australia will be made in March. Since Decred's marketing has always been a subject of debates, anybody who is interested in this domain is welcome to study the report and share their ideas in the corresponding [Reddit thread](https://www.reddit.com/r/decred/comments/fa70c3/decred_2019_marketing_report/).
 
 The [decred.org website](https://decred.org/) revamp was deployed in early March, with a new visual aesthetic, a new explainer video, and new subpages that feature Decred's history and its three tenets: Secure, Adaptable, and Sustainable. The website reflects agreed upon messaging that positions Decred as a superior store-of-value based upon those three tenets.
 
@@ -218,7 +215,7 @@ DCR Comic launched the [dcrcomic.org](https://dcrcomic.org/) website hosting all
 
 @Checkmate published an extremely interesting piece about the [ProgPoW debate](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad) in Ethereum describing the shortcomings of Ethereum's governance system and how Decred's tools and methodologies can be employed to solve them. It is an excellent example of inserting Decred's points of differentiation into wider conversations, and was well-received by many in the Ethereum community, including [David Hoffman](https://twitter.com/TrustlessState/status/1234653059424358400), co-host of the POV Crypto podcast.
 
-@dezryth posted the first [update](https://scottrchristian.com/2020/02/15/dezryth-proposal-updates/) for his proposal for the month of January.
+@dezryth posted the first [update](https://scottrchristian.com/2020/02/15/dezryth-proposal-updates/) for his Facebook and Events proposal for the month of January.
 
 Monde PR came on board and quickly [established](https://github.com/decredcommunity/pr/pull/7) project public relations goals, target audiences, key messages, credibility bullet points, documented key topics, performed a [competitor analysis](https://github.com/decredcommunity/pr/blob/release/competitor-analysis.csv), documented all spokespeople, created key stories to pitch, and even began outreach, yielding a number of valuable placements:
 
@@ -259,7 +256,7 @@ Upcoming:
 - Mar 24 - Decred Meetup - Madrid, Spain.
 - Mar 26 - Decred Meetup - Vigo, Spain.
 - Mar 27 - Decred Meetup - Valencia, Spain.
-- Mar 28 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. @guisso will present on how it was to implement a test environment for dcrlnd with docker-compose.
+- Mar 28 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. @guisso will present on what it took to implement a test environment for dcrlnd with docker-compose.
 - Apr 5 - [Toronto Blockchain Week](https://www.eventbrite.ca/e/discover-decred-an-autonomous-digital-currency-toronto-blockchain-week-tickets-91562362491) - Toronto, Canada. @ammarooni, @michae2xl and likely also @zubair are planning on being there.
 - Apr 9 - Bitcoin Road Trip - Buenos Aires, Argentina.
 - Apr 13-17 - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Decred is a Bronze sponsor.
@@ -277,7 +274,7 @@ Selected articles:
 - Decred, The Resilient Stronghold by @Checkmate, closing the 3 part series by looking at Bitcoin and Decred in terms of resilience, aggregate psychology, and user adoption ([medium](https://medium.com/decred/decred-the-resilient-stronghold-4038dc64dd2a))
 - New issues of the [Decred Drive](https://medium.com/@decreddrive) continued to appear every Thursday courtesy of @DecredDragon - thanks also for your kind words about the Journal, from the team.
 - CryptoEQ gave Decred a Bronze rating, citing concerns with high USD cost to buy a ticket, relatively high inflation compared to other SoV coins, and the cost of a ticket becoming more volatile ([cryptoeq.io](https://cryptoeq.io/coreReports/decred-abridged))
-- The State of Blockchain: Experts Weigh in on Adoption Around the World by Joseph Birch - featuring @elian on Latam and @akinsawyerr on Africa ([cointelegraph.com](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world))
+- The State of Blockchain: Experts Weigh in on Adoption Around the World by Joseph Birch - featuring @elian on LATAM and @akinsawyerr on Africa ([cointelegraph.com](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world))
 - After Four Years, is Decred Better than Bitcoin Yet? by Liam Kelly ([cryptobriefing.com](https://cryptobriefing.com/after-four-years-is-decred-better-bitcoin-yet/))
 
 Translations:
@@ -292,8 +289,8 @@ Videos:
 
 Audio:
 
-- Decred in Depth Ep 18. @elian talks about life on the road representing Decred all over LATAM, different use cases in different places, and a strategy for accentuating the tropical contingent of the global Decred community. ([libsyn](https://decredindepth.libsyn.com/elian-huesca-dcr-in-latam), [soundcloud](https://soundcloud.com/decredindepth/elian-huesca-dcr-in-latam))
-- Rough Consensus Ep. 1 - @Checkmate and @permabullnino open a new show, talking about derivatives, alt season, and blockchain dynamics ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-1-rough-start))
+- Decred in Depth Ep. 18. @elian talks about life on the road representing Decred all over LATAM, different use cases in different places, and a strategy for accentuating the tropical contingent of the global Decred community. ([libsyn](https://decredindepth.libsyn.com/elian-huesca-dcr-in-latam), [soundcloud](https://soundcloud.com/decredindepth/elian-huesca-dcr-in-latam))
+- Rough Consensus Ep. 1. @Checkmate and @permabullnino open a new show, talking about derivatives, alt season, and blockchain dynamics ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-1-rough-start))
 - Decred in Depth Roundup Ep. 1 (or Ep. 20 of Decred in Depth). Join @Checmkate, @permabullnino and @mr.black for a discussion of blockchain funding and security, 51% attacks, and their latest projects. ([soundcloud](https://soundcloud.com/decredindepth/dcr-round-up-with-checkmate))
 
 ## Community Discussions
@@ -302,12 +299,12 @@ Comm systems news:
 
 - The Slack bridge to Matrix and Discord was decommissioned on Feb 28 and most of the channels shuttered. Issues that led to this decision include the disruptive shutdown of automatic invites in 2018, DMs and other history disappearing after about a week, and migration of most active moderators to Matrix. Those who wished to continue following and participating in the chats moved to Matrix and Discord, to the rest we say a fond farewell.
 - @Exitus purged inactive accounts from Discord, cementing his iron grip on power among the denizens of Decred Discord. The pruning removed accounts that were not verified and had not logged on in over 30 days. Any account removed is free to re-join and go through the verification process.
-- The DCRComic team added a pack of stickers on Telegram, they can be added by following this [link](https://t.me/addstickers/DCRComic) or by clicking a sticker posted by someone else in the chat. Telegram users now have a choice of two Stakey themed sticker packs! The new set complement the existing set of Stakey stickers produced by @[lustosa](https://t.me/addstickers/dcrstakey). Looks like it was a good call to not spend $1,400 on an additional set of Telegram stickers from that proposal 2 months ago!
+- The DCRComic team added a pack of stickers on Telegram, they can be added by following this [link](https://t.me/addstickers/DCRComic) or by clicking a sticker posted by someone else in the chat. Telegram users now have a choice of two Stakey themed sticker packs! The new set complement the [existing set](https://t.me/addstickers/dcrstakey) of Stakey stickers produced by @lustosa. Looks like it was a good call to not spend $1,400 on an additional set of Telegram stickers from that [proposal](https://proposals.decred.org/proposals/4acb95564d36488a7ee64683a84dd7954982b2f4743e2f7a15477231f863442f) 2 months ago!
 
 Selected Reddit posts:
 
-- @Checkmate shared his Decred [Wishlist](https://www.reddit.com/r/decred/comments/f4i870/decred_wishlist/), and others responded with their thoughts about @checkmate's suggestions, and some suggestions of their own.
-- The Decred Marketing [Report](https://www.reddit.com/r/decred/comments/fa70c3/decred_2019_marketing_report/) saw 15 comments, some celebrating it, others taking issue with aspects of it.
+- @Checkmate shared his Decred [Wishlist](https://www.reddit.com/r/decred/comments/f4i870/decred_wishlist/), and others responded with their thoughts about @Checkmate's suggestions, and some suggestions of their own.
+- The Decred Marketing Report saw [15 comments](https://www.reddit.com/r/decred/comments/fa70c3/decred_2019_marketing_report/), some celebrating it, others taking issue with aspects of it.
 
 Selected Twitter discussions:
 
