--- a/journal/202002.md
+++ b/journal/202002.md
@@ -243,7 +243,7 @@ Attended:
 - Feb 8 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268496816/) - Salvador, Brazil. ([photos](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158119740315283cQkoQ:decred.org))
 - Feb 8 - [Blockchain and AI](https://www.eventbrite.com/e/blockchain-and-ai-best-tools-for-the-development-of-nations-tickets-91389994935) - Casablanca, Morocco. This event featured second publicly known Decred Cake. (photos: [twitter](https://twitter.com/DecredArabia/status/1226266689492410368), [matrix](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158119875815325RomyP:decred.org))
 - Feb 8 - [Decred Crypto Hangout](https://www.eventbrite.com/e/decred-crypto-hangout-learn-about-career-opportunities-in-the-industry-tickets-91830803405) - Lagos, Nigeria. Five Decred contributors shared knowledge about various aspects of Decred. The event was attended by 25+ people and representatives of @yellowcardio, @HuobiAfrica and @Telos4africa. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200208-decred-crypto-hangout-lagos-nigeria.md))
-- Feb 27 - [3er After UX Crypto](https://www.eventbrite.com.ar/e/3er-after-ux-crypto-sponsor-decred-tickets-95737271757) - Santa Fe, Argentina. Decred was a sponsor. ([photos](Decred_ES/status/1233159907194605572))
+- Feb 27 - [3er After UX Crypto](https://www.eventbrite.com.ar/e/3er-after-ux-crypto-sponsor-decred-tickets-95737271757) - Santa Fe, Argentina. Decred was a sponsor. ([photos](https://twitter.com/Decred_ES/status/1233159907194605572))
 - Feb 27 - Decred and Stamping.io Meetup - Lima, Peru. @victorarubin presented Decred to Stamping.io and Life Leadership community in Lima, about 60 people attended. ([video](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$1582953585375340iScnJ:matrix.org))
 
 Upcoming:
@@ -368,5 +368,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, Dustorf, guisso, l1ndseymm, richardred
-- reviews and feedback: ay-p, chappjc, davecgh, dnldd, jholdstock, lukebp, matheusd, raedah
+- writing and editing: bee, degeri, Dustorf, francov\_, guisso, l1ndseymm, richardred
+- reviews and feedback: ay-p, chappjc, davecgh, dnldd, emiliomann, jholdstock, lukebp, matheusd, raedah
