--- a/journal/202003.md
+++ b/journal/202003.md
@@ -58,6 +58,7 @@ Welcome to new first time contributors with code merged to master: {list people 
 Congratulations to new [contributors](https://decred.org/contributors/) listed on decred.org:
 
 - {name, sort names alphabetically} ({nickname}, {title or domain})
+- {if we dropped removals, shall we also drop additions to not focus people on this page? https://github.com/xaur/decred-news/blob/docs/guidelines.md#reporting-departures }
 
 {welcome new corporate contractors with short intros, if any}
 
@@ -214,6 +215,10 @@ Steem takeover:
 {other: regulations, privacy, security, fun}
 
 epic repo https://www.zerohedge.com/markets/ny-fed-conduct-1-trillion-repo-over-two-days-stabilize-treasury-financing-market
+
+Fed infinite cash https://www.zerohedge.com/markets/kashkari-says-fed-has-infinite-amount-cash-we-create-it-electronically
+
+ECB [announced](https://www.ecb.europa.eu/press/pr/date/2020/html/ecb.pr200318_1~3949d6f266.en.html) a EUR 750 billion "Pandemic Emergency Purchase Programme" and [noted](https://twitter.com/Lagarde/status/1240414918966480896) "There are no limits to our commitment to the euro. We are determined to use the full potential of our tools, within our mandate". The bank is ready to further increase the size of asset purchase programmes and revise any self-imposed limits.
 
 markets panicking on cv https://twitter.com/business/status/1236919431156170752
 
