--- a/journal/202003.md
+++ b/journal/202003.md
@@ -157,6 +157,7 @@ Selected articles:
 - https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad
 - https://beincrypto.com/could-proof-of-stake-cryptocurrencies-lead-to-more-centralization/
 - https://medium.com/@dlefebvr/crypto-risk-is-not-what-you-think-8a2662840b70
+- https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a {good?}
 
 Translations:
 
@@ -181,7 +182,7 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- {}
+- https://www.reddit.com/r/CryptoTechnology/comments/fhulq3/decred_now_supports_the_most_privacy_preserving/
 
 Selected Twitter discussions:
 
