Add stuff and Events

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -16,6 +16,8 @@ Highlights for March:
 
 [dcrd](https://github.com/decred/dcrd): {}
 
+https://bounty.decred.org/2020/03/status-update/ { to clarify, this was a bug in implementation but not consensus rules, right? }
+
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
 [Decrediton](https://github.com/decred/decrediton): {}
@@ -127,6 +129,8 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 {investment adoption}
 
+https://twitter.com/Checkmatey/status/1244030247558729729
+
 ## Outreach
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
@@ -135,15 +139,34 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+- Mar 4 - [Decred Meetup](https://twitter.com/Decred_ES/status/1235277262846652416) - Buenos Aires, Argentina. { @Tomee did it happen? }
+- Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-en-uninet-business-school-caracas-venezuela-tickets-97157792573) - Caracas, Venezuela. The event was held at Uninet Business School. { @elian did it happen? }
+- Mar 4 - [Crypto and Blockchain](https://www.meetup.com/BC-Aus/events/268793182/) - Melbourne, Australia. The event directed entry fees to Crypto Fire Alliance to help with the bushfire emergency (overall the fundraiser [received](https://www.finder.com.au/crypto-bushfire-fundraiser) $27K in crypto). @eSizeDave participated on the panel discussion, [noting](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158381267934685XUpiS:decred.org): "the audience had more questions for me and than anyone else, and got a lot of follow-up meetings as a result of it". ([video](https://twitter.com/DecredAustralia/status/1235390840307978245))
+- Mar 5 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-en-valencia-venezuela-tickets-97804334397) - Valencia, Venezuela. { @elian did it happen? }
+- Mar 6 - [Impact Hub](https://www.eventbrite.com/e/decred-meetup-impact-hub-caracas-venezuela-tickets-97159680219) - Caracas, Venezuela. { @elian did it happen? }
+- Mar 8 - [International Women's Day](https://www.meetup.com/GDGCasablanca/events/268661463/) - Casablanca, Morocco. The event was held at ENSAM, a University of Science. Most of the 70 attendees were data science students and developers. @arij gave a 1-hour talk about blockchains and Decred and a workshop afterwards: "What I've learned from my experiences talking and explaining blockchain technology and Decred, is that people are more interested when you show them how things really work with demo and videos, especially when it is their first time learning about it". ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158374584733992NOIMZ:decred.org), [photos](https://www.flickr.com/photos/187387360@N04/albums/72157713440754483))
+- Mar 12 - Women in Blockchain - Mexico City, Mexico. { @francov_ did it happen? }
+- Mar 12 - Decred Meetup - Montevideo, Uruguay. { @tomee did it happen? }
+- Mar 12 - [Spanish Community Call](https://twitter.com/Decred_ES/status/1237397847106105345) - web. The first Spanish online meeting used Discord to talk about all the topics common in Decred. About half of ~10 people were new to the project. ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158405774037462NMXvX:decred.org))
+- Mar 18 - Exchanges in LATAM - web. @elian talked about centralized and decentralized exchanges in a virtual meetup with people from [@AvaLatam](https://twitter.com/AvaLatam), [@blockchain_land](https://twitter.com/blockchain_land) and virica.io Mexico. Around 16 people attended and what we've learned is that online talks should be 30 min or less.
+- Mar 20-21 - [CIBTC Blockchain Summit](http://cibtc.es/) - Motril, Spain. Decred was a gold sponsor. { @elian did it happen? }
+- Mar 24 - [Decred Webinar](https://www.meetup.com/es-ES/blockacademycl/events/269108758/) - web. @tomee and @camilolwi were talking all things Decred and the challenges of decentralized blockchain governance in a webinar co-organized with Blockchain Academy Chile. { did it happen? }
+- Mar 28 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. { @guisso did it happen? }
+- Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1243953116963315712) - web. { @elian did it happen? }
+- Mar 30 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/269640276/) - web. { @zohand did it happen? }
 
-Upcoming:
+Upcoming: { which are still planned? }
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
+- Apr 5 - [Toronto Blockchain Week](https://www.eventbrite.ca/e/discover-decred-an-autonomous-digital-currency-toronto-blockchain-week-tickets-91562362491) - Toronto, Canada. @ammarooni, @michae2xl and likely also @zubair are planning on being there.
+- Apr 9 - Bitcoin Road Trip - Buenos Aires, Argentina.
+- Apr 24 - Decred Meetup - La Paz, Bolivia.
+- May 6 - [Bitcoinference](https://www.eventbrite.com/e/bitcoinference-where-the-blockchain-meets-you-tickets-94598812595) - Cancún, Mexico.
+- May 14 - [BlockConf](https://blockconf.digital/) - web. @elian will talk about Decred in LATAM.
+- May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
+- June - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Moved from March.
+- June - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Moved from April.
 
-{announcements in Events domain}
-
-- events rescheduled https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158394973936195eJdnt:decred.org
+A lot of events were canceled or [rescheduled](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158394973936195eJdnt:decred.org) due to COVID-19 fears.
 
 ## Media
 
@@ -158,6 +181,7 @@ Selected articles:
 - https://beincrypto.com/could-proof-of-stake-cryptocurrencies-lead-to-more-centralization/
 - https://medium.com/@dlefebvr/crypto-risk-is-not-what-you-think-8a2662840b70
 - https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a {good?}
+- Brad Mill's opinion why Decred will fail https://medium.com/@bradmillscan/since-decred-is-competing-with-bitcoin-its-designed-to-fail-a13df8b5abbb (_missed in Jan_)
 
 Translations:
 
@@ -165,11 +189,14 @@ Translations:
 
 Videos:
 
-- {}
+- https://www.youtube.com/watch?v=Liol1lLCinQ
 
 Audio:
 
-- {}
+- https://roughconsensus.libsyn.com/rough-consensus-2-distributed-consensus
+- https://soundcloud.com/decredindepth/leo-zhang-dcr-mining
+- https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino { is this about dcr? }
+- https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead
 
 ## Community Discussions
 
@@ -186,7 +213,7 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- {}
+- https://twitter.com/swack0/status/1239674494526111747
 
 ## Markets
 
@@ -197,6 +224,8 @@ In March DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average dail
 On Mar 7 BTC/USD started its decline from $9,100 mark down to $7,800 on Mar 11. Following the global stock market crash and the wave of coronavirus panic on that week, BTC/USD tanked on Mar 12 with a bottom of ~$5,600. Most cryptoassets lost around 30% that day, demonstrating their persisting dependence on BTC and the mostly speculative price levels. This dump took DCR/USD with it down to $10.8. {update numbers}
 
 exchanges decopupling https://twitter.com/HsakaTrades/status/1239227306863820801
+
+{this is kind of speculative but interesting perspective, keep?} https://avc.com/2020/03/correlation-and-market-meltdowns/
 
 ## Relevant External
 
