--- a/journal/202003.md
+++ b/journal/202003.md
@@ -97,6 +97,12 @@ In March the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqD
 
 @bee has extensively [commented](https://www.reddit.com/r/decred/comments/fa70c3/decred_2019_marketing_report/) on the 2019 Marketing Report and shared his vision for moving forward.
 
+
+
+DCRComic proposal on [hold](https://twitter.com/DCRComic/status/1243197581104041984?s=20)
+
+
+
 ## Network
 
 { hint: cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers }
@@ -214,7 +220,7 @@ Audio:
 
 - https://roughconsensus.libsyn.com/rough-consensus-2-distributed-consensus
 - https://soundcloud.com/decredindepth/leo-zhang-dcr-mining
-- https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino { is this about dcr? }
+- https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino { is this about dcr? rr: yes at least partially, see 30:00}
 - https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead
 - What is Decred? by @elian (in Spanish, [criptotendencias.com](https://www.criptotendencias.com/podcast/episodio-30-que-es-decred-entrevista-con-elian-huesca-community-builder-business-dev-del-proyecto/))
 - Decred Brief by @elian (in Spanish, [Territorio Bitcoin](https://www.ivoox.com/episodio-111-especial-comunidad-blockchain-cuarentena-audios-mp3_rf_49382826_1.html))
@@ -261,7 +267,13 @@ Steem takeover:
 
 {DEX}
 
+MakerDAO bailout auction
+
+https://www.coindesk.com/defi-leader-makerdao-weighs-emergency-shutdown-following-eth-price-drop
+
 {relevant exchanges and websites}
+
+https://thenews.asia/amendment-to-special-reporting-act-passes-cryptocurrency-trading-now-legal-in-south-korea/
 
 {other: regulations, privacy, security, fun}
 
