--- a/journal/202003.md
+++ b/journal/202003.md
@@ -149,32 +149,35 @@ https://twitter.com/Checkmatey/status/1244030247558729729
 
 Attended:
 
-- Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-la-plata-tickets-95666770887#) - La Plata, Argentina. Decred La Plata Meetup was an introduction to Decred project in which @camilolwi @tomee and @pablito talked about the fundamentals of Decred, its security and hybrid blockchain model, governance, voting and how to become a contractor for the project. There were around 20 ateendees to the meetup and a session of networking. {Tweet (https://twitter.com/Decred_ES/status/1234666425094004737) (https://twitter.com/Decred_ES/status/1235277262846652416) photos (https://twitter.com/cryptorc_tech/status/1238180910513733634) }
-- Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-en-uninet-business-school-caracas-venezuela-tickets-97157792573) - Caracas, Venezuela. The meetup was co-hosted by Uninet Business School and Innova Consultants. There were 15 attendees to the meetup, there was an introduction to Decred, its security and hybrid model, privacy, how to contribute, followed by a session of Q&A and networking.   {Tweet(https://twitter.com/Decred_ES/status/1234569119560847360) photos (https://twitter.com/Decred_ES/status/1235324847338795009) }
+- Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-la-plata-tickets-95666770887) - La Plata, Argentina. It was an introduction to Decred project in which @camilolwi, @tomee and @pablito talked about the fundamentals of Decred, its security and hybrid consensus model, governance, voting and how to become a contractor for the project. There were around 20 attendees to the meetup and a session of networking. ([photos](https://twitter.com/cryptorc_tech/status/1238180910513733634))
+- Mar 4 - [Decred Meetup](https://www.eventbrite.com/e/decred-en-uninet-business-school-caracas-venezuela-tickets-97157792573) - Caracas, Venezuela. The meetup was co-hosted by Uninet Business School and Innova Consultants. There were 15 attendees to the meetup, there was an introduction to Decred, its security and hybrid model, privacy, how to contribute, followed by a session of Q&A and networking. ([photos](https://twitter.com/Decred_ES/status/1235324847338795009))
 - Mar 4 - [Crypto and Blockchain](https://www.meetup.com/BC-Aus/events/268793182/) - Melbourne, Australia. The event directed entry fees to Crypto Fire Alliance to help with the bushfire emergency (overall the fundraiser [received](https://www.finder.com.au/crypto-bushfire-fundraiser) $27K in crypto). @eSizeDave participated on the panel discussion, [noting](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158381267934685XUpiS:decred.org): "the audience had more questions for me and than anyone else, and got a lot of follow-up meetings as a result of it". ([video](https://twitter.com/DecredAustralia/status/1235390840307978245))
-- Mar 5 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-en-valencia-venezuela-tickets-97804334397) - Valencia, Venezuela, co-hosted by ClicTechNova y CoWorking Lab. The meetup was an introduction to Decred ecosystem, hybrid blockchain, governance mechanism, privacy, and elements that make Decred a Decentralised Autonomous Organisation. There were aorund 50 attendees that make interesting questions about social attacks to the network, how to contribute and the incentives model of DCR. {Tweet (https://twitter.com/Decred_ES/status/1234596258070908928) photos (https://twitter.com/Decred_ES/status/1236079742643773440) video (https://twitter.com/Decred_ES/status/1236080559752916998)}
-- Mar 6 - [Impact Hub](https://www.eventbrite.com/e/decred-meetup-impact-hub-caracas-venezuela-tickets-97159680219) - Caracas, Venezuela, co-hosted by El Dorado y Cointigo. The meetup was an introduction to Decred ecosystem, its governance strcuture and what make it a different cryptocurrency from the rest. Around 30 people attented to the meetup, several entrepreneurs and developers but also several new users of cryptocurrencies looking for more information about the technology and investment opportunities. {Tweet (https://twitter.com/Decred_ES/status/1236337867095343104) video (https://twitter.com/Decred_ES/status/1236340242698752001)}
+- Mar 5 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-en-valencia-venezuela-tickets-97804334397) - Valencia, Venezuela. Co-hosted by ClicTechNova y CoWorking Lab. The meetup was an introduction to Decred ecosystem, hybrid blockchain, governance mechanism, privacy, and elements that make Decred a DAO. There were ~50 attendees that asked interesting questions about social attacks on the network, how to contribute and the incentive model of DCR. ([photos](https://twitter.com/Decred_ES/status/1236079742643773440), [video](https://twitter.com/Decred_ES/status/1236080559752916998))
+- Mar 6 - [Impact Hub](https://www.eventbrite.com/e/decred-meetup-impact-hub-caracas-venezuela-tickets-97159680219) - Caracas, Venezuela. Co-hosted by El Dorado y Cointigo. The meetup was an introduction to Decred ecosystem, its governance structure and what makes it a different cryptocurrency from the rest. Around 30 people attended, several entrepreneurs and developers but also several new users of cryptocurrencies looking for more information about the technology and investment opportunities. ([photos](https://twitter.com/Decred_ES/status/1236337867095343104), [video](https://twitter.com/Decred_ES/status/1236340242698752001))
 - Mar 8 - [International Women's Day](https://www.meetup.com/GDGCasablanca/events/268661463/) - Casablanca, Morocco. The event was held at ENSAM, a University of Science. Most of the 70 attendees were data science students and developers. @arij gave a 1-hour talk about blockchains and Decred and a workshop afterwards: "What I've learned from my experiences talking and explaining blockchain technology and Decred, is that people are more interested when you show them how things really work with demo and videos, especially when it is their first time learning about it". ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158374584733992NOIMZ:decred.org), [photos](https://www.flickr.com/photos/187387360@N04/albums/72157713440754483))
-- Mar 12 - Women in Blockchain - Mexico City, Mexico. Co-hosted by the Bitcoin Embassy the meetup was to talk about women's envolment in the cryptocurrency industry and how to empower women to use crypto. @Francov_ did a presentation on how to contribute to Decred project and her experience working in the cryptocurrency industry. There were around 30 at the meetup and after presentation there was a netwoking session {Tweet (https://twitter.com/Decred_ES/status/1238150119645732864) photos (https://twitter.com/victorarubin/status/1238288234368708608) (https://twitter.com/LOReBitcoin/status/1238511419886313475) (https://twitter.com/victorarubin/status/1238296200622813184) }
-- Mar 12 - Decred Meetup - Montevideo, Uruguay, around ≈25 people assisted to the meetup. @tomee presented an introduction to Decred and its security, adaptability and sustentability characteristics, Politeia, governance and how to contribte. The meetup was also a networking session and some of the attendeed knew the proyect from Labitconf. { Tweet (https://www.meetup.com/esES/BitcoinBlockchainUruguay/events/269160706/) (https://twitter.com/gtugoresblock/status/1234907798242299904) photos (https://twitter.com/ivarese/status/1238628854379536389) (https://twitter.com/cryptorc_tech/status/1241081659669315585) }
+- Mar 12 - Women in Blockchain - Mexico City, Mexico. Co-hosted by the Bitcoin Embassy, the meetup was to talk about women's envolment in the cryptocurrency industry and how to empower women to use crypto. @francov\_ did a presentation on how to contribute to Decred project and her experience working in the industry. There were ~30 at the meetup and after presentation there was a netwoking session (photos: [1](https://twitter.com/victorarubin/status/1238288234368708608), [2](https://twitter.com/LOReBitcoin/status/1238511419886313475), [3](https://twitter.com/victorarubin/status/1238296200622813184))
+- Mar 12 - [Decred Meetup](https://www.meetup.com/es-ES/BitcoinBlockchainUruguay/events/269160706/) - Montevideo, Uruguay. Around 25 people attended the meetup. @tomee presented an introduction to Decred and its security, adaptability and sustainability, Politeia, governance and how to contribute. The meetup was also a networking session and some of the people knew the project from Labitconf. (photos: [1](https://twitter.com/ivarese/status/1238628854379536389), [2](https://twitter.com/cryptorc_tech/status/1241081659669315585))
 - Mar 12 - [Spanish Community Call](https://twitter.com/Decred_ES/status/1237397847106105345) - web. The first Spanish online meeting used Discord to talk about all the topics common in Decred. About half of ~10 people were new to the project. ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158405774037462NMXvX:decred.org))
-- Mar 18 - Exchanges in LATAM - web. @elian talked about centralized and decentralized exchanges in a virtual meetup with people from [@AvaLatam](https://twitter.com/AvaLatam), [@blockchain_land](https://twitter.com/blockchain_land) and virica.io Mexico. Around 16 people attended and what we've learned is that online talks should be 30 min or less. { Tweet (https://twitter.com/Decred_ES/status/1240428280756310018) }
-POSTPONED UNTIL FURTHER NOTICE - Mar 20-21 - [CIBTC Blockchain Summit](http://cibtc.es/) - Motril, Spain. Decred was a gold sponsor. { @elian did it happen? }
-- Mar 24 - [Decred Webinar](https://www.meetup.com/es-ES/blockacademycl/events/269108758/) - web. @tomee and @camilolwi were talking all things Decred and the challenges of decentralized blockchain governance in a webinar co-organized with Blockchain Academy Chile. { Tweet (https://twitter.com/BlockAcademyCL/status/1240279522869686273) video (https://www.youtube.com/watch?v=U07ZL_qFAQM&feature=youtu.be) }
-- Mar 26 - Decred en Español second community call with 13 participants from Argetina, Mexico, Bolivia, Chile and with 7 new users. The call was a introduction to Decred, Decrediton main characteristics and open mic for questions and comments { Tweet (https://twitter.com/Decred_ES/status/1243214184793485314)}
+- Mar 18 - Exchanges in LATAM - web. @elian talked about centralized and decentralized exchanges in a virtual meetup with people from [@AvaLatam](https://twitter.com/AvaLatam), [@blockchain_land](https://twitter.com/blockchain_land) and virica.io Mexico. Around 16 people attended and what we've learned is that online talks should be 30 min or less.
+- Mar 24 - [Decred Webinar](https://www.meetup.com/es-ES/blockacademycl/events/269108758/) - web. @tomee and @camilolwi were talking all things Decred and the challenges of decentralized blockchain governance in a webinar co-organized with Blockchain Academy Chile. ([video](https://www.youtube.com/watch?v=U07ZL_qFAQM))
+- Mar 27 - Decred en Español Call - web. Second community Discord call with 13 participants from Argetina, Mexico, Bolivia, Chile and with 7 new users. The call was an introduction to Decred, Decrediton, and an open mic for questions and comments.
 - Mar 28 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. { @guisso did it happen? }
-- Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1243953116963315712) - web. The AMA degree of engagement was very high, the Decred en Español team received docens of questions from the audience and gifted .333 DCR to the best questions. This is the second AMA of Decred en Español with Binance en Español { Tweet (https://twitter.com/Decred_ES/status/1244360357843533825) }
+- Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1244360357843533825) - web. The level of engagement in AMA was very high. The Decred Spanish team received dozens of questions from the audience and gifted 0.333 DCR to the best questions. This is the second AMA of Decred Spanish with Binance Spanish.
 - Mar 30 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/269640276/) - web. { @zohand did it happen? }
 
 Upcoming: { which are still planned? }
 
 - Apr 9 - Bitcoin Road Trip - Buenos Aires, Argentina.
-POSTPONED UNITL FURTHER NOTICE - Decred Meetup - La Paz, Bolivia.
-POSTPONED UNITL FURTHER NOTICE - May 6 - [Bitcoinference](https://www.eventbrite.com/e/bitcoinference-where-the-blockchain-meets-you-tickets-94598812595) - Cancún, Mexico.
 - May 14 - [BlockConf](https://blockconf.digital/) - web. @elian will talk about Decred in LATAM.
 - May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
 - June - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Moved from March.
 - June - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Moved from April.
+
+Postponed until further notice:
+
+- [CIBTC Blockchain Summit](http://cibtc.es/) - Motril, Spain.
+- Decred Meetup - La Paz, Bolivia.
+- [Bitcoinference](https://www.eventbrite.com/e/bitcoinference-where-the-blockchain-meets-you-tickets-94598812595) - Cancún, Mexico.
 
 Canceled:
 
@@ -196,11 +199,11 @@ Selected articles:
 - https://medium.com/@dlefebvr/crypto-risk-is-not-what-you-think-8a2662840b70
 - https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a {good?}
 - Brad Mill's opinion why Decred will fail https://medium.com/@bradmillscan/since-decred-is-competing-with-bitcoin-its-designed-to-fail-a13df8b5abbb (_missed in Jan_)
-- {Decred: how does your development continue during the bear market} by {@adcade} ([{Cointelegraph en Español}]({https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market}) - {in Spanish}
+- Decred: How Does Your Development Continue During the Bear Market? by @adcade (in Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market))
 
 Translations:
 
-- {Teoría de los tres pilares en el contrato social del Cypherpunk} by {@Francov_} ([{domain}]({https://medium.com/decred-es/teor%C3%ADa-de-los-tres-pilares-en-el-contrato-social-del-cypherpunk-40f569836b6a}) - {in Spanish}
+- Theory of Three Pillars in the Cypherpunk Social Contract - [in Spanish](https://medium.com/decred-es/teor%C3%ADa-de-los-tres-pilares-en-el-contrato-social-del-cypherpunk-40f569836b6a) by @francov\_
 
 Videos:
 
@@ -212,8 +215,8 @@ Audio:
 - https://soundcloud.com/decredindepth/leo-zhang-dcr-mining
 - https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino { is this about dcr? }
 - https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead
-- {What is Decred?} by {@elian} ([{Criptotendencias}]({https://www.criptotendencias.com/podcast/episodio-30-que-es-decred-entrevista-con-elian-huesca-community-builder-business-dev-del-proyecto/}) - {in Spanish}
-- {Decred Brief} by {@elian} ([{Territorio Bitcoin}]({https://www.ivoox.com/episodio-111-especial-comunidad-blockchain-cuarentena-audios-mp3_rf_49382826_1.html}) - {in Spanish}
+- What is Decred? by @elian (in Spanish, [criptotendencias.com](https://www.criptotendencias.com/podcast/episodio-30-que-es-decred-entrevista-con-elian-huesca-community-builder-business-dev-del-proyecto/))
+- Decred Brief by @elian (in Spanish, [Territorio Bitcoin](https://www.ivoox.com/episodio-111-especial-comunidad-blockchain-cuarentena-audios-mp3_rf_49382826_1.html))
 
 ## Community Discussions
 
@@ -285,6 +288,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, elian degeri, richardred
 - reviews and feedback: {}
 - title image: {}
