--- a/journal/202003.md
+++ b/journal/202003.md
@@ -168,6 +168,7 @@ Attended:
 Upcoming: { which are still planned? }
 
 - Apr 9 - Bitcoin Road Trip - Buenos Aires, Argentina.
+- Apr 16 - [Decred Webinar](https://twitter.com/Decred_ES/status/1245452957417684992) - web. The topic will be "Let's talk about cryptocurrencies and the future of money" - a webinar hosted by Ibero (university) to discuss crypto and give an overview of Decred.
 - May 14 - [BlockConf](https://blockconf.digital/) - web. @elian will talk about Decred in LATAM.
 - May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
 - June - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Moved from March.
@@ -289,5 +290,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, elian degeri, richardred
-- reviews and feedback: {}
+- reviews and feedback: adcade
 - title image: {}
