--- a/journal/202003.md
+++ b/journal/202003.md
@@ -290,5 +290,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, elian degeri, richardred
-- reviews and feedback: adcade
+- reviews and feedback: adcade, ammarooni, emiliomann, michae2xl
 - title image: {}
