--- a/journal/202003.md
+++ b/journal/202003.md
@@ -105,15 +105,14 @@ DCRComic proposal on [hold](https://twitter.com/DCRComic/status/1243197581104041
 
 ## Network
 
-{ hint: cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers }
 
-Hashrate: March's hashrate opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate distribution as of {date}: {pool name n%, ...} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: March's hashrate opened at ~359 Ph/s and closed ~332 Ph/s, bottoming at 307 Ph/s and peaking at 455 Ph/s throughout the month. Pool hashrate distribution as of Apr 1: UUPool 54.5%, Poolin 17.8%, lab.antpool.com 17.3%, Luxor 2.47%, BTC.com 2.23%, F2Pool 1.52%, BeePool 0.13%, CoinMine 0.08%, Suprnova 0.02% and others ~ 3.82% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
 { hint: helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
-Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. The price varied between {n.n}-{n.n} DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply.
+Staking: 30-day average ticket price was 141.85 DCR (+9.75) per dcrstats.com. The price varied between 130.9-166.82 DCR. Locked amount was 5.51-5.74 million DCR, which corresponded to 49.24-51.14% of the available supply.
 
-{recap of ticket price action if it was interesting}
+The ticket price again hit a new maximum (After stake algorithm chage) 166.82 DCR. 
 
 { hint: helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
 
