--- a/journal/202003.md
+++ b/journal/202003.md
@@ -114,9 +114,7 @@ Staking: 30-day average ticket price was 141.85 DCR (+9.75) per dcrstats.com. Th
 
 The ticket price again hit a new maximum (After stake algorithm chage) 166.82 DCR. 
 
-{ hint: helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
-
-Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per {new source?}. Version distribution: {vx.y.z: n% (+n%), ...}.
+Nodes: Throughout [March](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1583017200000&to=1585691999000) there was an average of 146 public listening nodes and 239 total nodes per dcr.farm. Average version distribution for Mar: 28.5 use dcrd v1.5.1, 25.1% use dcrd v1.4, 16.1% use dcrd v1.5, 8% use dcrd v1.5 dev and RC builds, 7.6% use dcrwallet v1.4, 5.1% use dcrwallet v1.5.1, 4.2% use dcrwallet v1.5.
 
 {any interesting analysis or events in the network}
 
