--- a/journal/202003.md
+++ b/journal/202003.md
@@ -216,6 +216,8 @@ The Brazil marketing and events [proposal](https://proposals.decred.org/proposal
 - "Decred's Community Allows More than 500,000 BRL to be Invested in Brazil" ([criptofacil.com](https://www.criptofacil.com/comunidade-decred-permite-que-mais-r-500-mil-sejam-investidos-brasil/))
 - "Cryptocurrency Will Invest More than Half a Million in Brazil" ([livecoins.com.br](https://livecoins.com.br/criptomoeda-vai-investir-mais-meio-milhao-brasil/))
 - "'Whales' Approve and Decred Can Invest More than 500,000BRL to Promote Cryptocurrency in Brazil" ([cointelegraph.com.br](https://cointelegraph.com.br/news/decred-pode-investir-ate-us-500-mil-para-promover-criptomoeda-no-brasil)) - this one is poorly written and is based on another interview (@emiliomann)
+- "The Cryptocurrencies that Invest the Most in Brazil" ([cointimes.com.br](https://cointimes.com.br/as-criptomoedas-que-mais-investem-no-brasil/))
+
 
 Translations:
 
