2 yr retro draft

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -305,7 +305,15 @@ markets panicking on cv https://twitter.com/business/status/1236919431156170752
 
 ## Happy Birthday DJ
 
-{retro}
+Retrospective from @bee:
+
+- The DJ team has grown from 1 to 5 contributors, a half dozen of translators, and 1-2 dozens of people reviewing and sharing feedback.
+- The byte size of an issue has grown from 20 KB to ~50 KB.
+- { maybe post that Mar 2018 draft for fun }
+- Problem of the first year: at the start of every issue I worried that it wouldn't get enough content. I was wrong every single time. Problem of the second year: at the end of every issue I worried that we wouldn't cover everything we'd like to or grow it too big. And it was often the case! There's too much going on in Decred and in the crypto space.
+- I couldn't imagine what the [index] of all issues would look like in 2 years!
+- About 6 months after starting DJ I began to worry about decreasing Reddit upvotes. I talked to people and learned two things. First is that people who've been here for years told me it is common: humans get less sensitive to any stimulus over time, even high quality one. Second is that I don't know these people who leave likes. But people I do know, talk to every day, people with most intelligence and wisdom, people I care about most and who are the reason why I'm still here, keep telling me I'm doing a good job. And they keep doing their job for years. So I asked myself, why do I care about these unknown people more than I care what the best people around me think? It doesn't make sense! So I stopped worrying about that. (No offense to any DJ readers!)
+- We received a lot of positive feedback {link testimonials} over these two years. We don't write DJ for praise, but kind words let us know that we're still on the right track. Thank you all!
 
 ## About This Issue
 
