dev updates dcrdocs, decred.org, dcrlnd repos

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -35,6 +35,21 @@ https://bounty.decred.org/2020/03/status-update/ { to clarify, this was a bug in
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
 
+* [improvements](https://github.com/decred/dcrlnd/pull/84) to build elements.
+
+* make p2pkh [deafult](https://github.com/decred/dcrlnd/pull/86) on dcrlncli for newaddress address type.
+
+* go version [bumped](https://github.com/decred/dcrlnd/pull/85) to 1.14.
+
+In development:
+
+* Enabling SPV mode for [remote wallets](https://github.com/decred/dcrlnd/pull/95)
+
+* Switch to use recently introduced wallet-backend [drivers](https://github.com/decred/dcrlnd/pull/94) for chain IO operations. 
+
+* Add [implementation](https://github.com/decred/dcrlnd/pull/92) for chainntnfs package that use the wallet as source of chain events. This allows to further decouple dcrlnd from an underlying dcrd, which is a requirement for having a dcrlnd instance running in SPV mode.
+
+
 [cspp](https://github.com/decred/cspp): {}
 
 [dcrdex](https://github.com/decred/dcrdex): {}
@@ -51,7 +66,17 @@ https://bounty.decred.org/2020/03/status-update/ { to clarify, this was a bug in
 
 [docs](https://github.com/decred/dcrdocs): {}
 
+* dcrlnd docs [updated](https://github.com/decred/dcrdocs/pull/1083) for latest release (0.2.1). 
+
+* Guide on how to join Matrix [added](https://github.com/decred/dcrdocs/pull/1081). 
+
+* Inflation page renamed to “Issuance” page, to clear up confusion. 
+
+* Documentation for Tor hidden service for CoinShuffle++ (CSPP) [added](https://github.com/decred/dcrdocs/pull/1073).
+
 [decred.org](https://github.com/decred/dcrweb): {}
+
+Large cleanup pass fixing minor issues with the new website, a number of [small improvements](https://github.com/decred/dcrweb/pull/855) and updated VSP [copy](https://github.com/decred/dcrweb/pull/853).
 
 Other:
 
