Retro add title fun

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -338,6 +338,7 @@ Retrospective and a bit of trivia from @bee:
 - The byte size of an issue has grown from 20 KB to ~50 KB. The biggest issue was [64.5 K](https://xaur.github.io/decred-news/journal/201908.html).
 - Our production process has evolved significantly and is now extensively [documented](https://github.com/xaur/decred-news/blob/docs/guidelines.md).
 - You may have noticed that [Decred](https://xaur.github.io/decred-news/journal/201805.html) [Cake](https://xaur.github.io/decred-news/journal/202002.html) has a special meaning for me.
+- Among dozens of titles considered were "Monthly Stakeholder Entertainment Session" and "Deep in Decred". The latter was rejected as having too strong connotations with adult content.
 - { maybe post that Mar 2018 draft for fun }
 - In March 2019 I got somewhat exhausted and [announced](https://xaur.github.io/decred-news/journal/201903.html#psa-decred-journal-takes-a-break) that the production of future issues is uncertain. Luckily, a few more people have [stepped in](https://github.com/xaur/decred-news/issues/65) and we continued.
 - Problem of the first year: at the start of every issue I worried that it wouldn't get enough content. I was wrong every single time. Problem of the second year: at the end of every issue I worried that we wouldn't cover everything we'd like to or grow it too big. And it was often the case! There's too much going on in Decred and in the crypto space.
