Retro about git

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -343,6 +343,7 @@ Retrospective and a bit of trivia from @bee:
 - In March 2019 I got somewhat exhausted and [announced](https://xaur.github.io/decred-news/journal/201903.html#psa-decred-journal-takes-a-break) that the production of future issues is uncertain. Luckily, a few more people have [stepped in](https://github.com/xaur/decred-news/issues/65) and we continued.
 - Problem of the first year: at the start of every issue I worried that it wouldn't get enough content. I was wrong every single time. Problem of the second year: at the end of every issue I worried that we wouldn't cover everything we'd like to or grow it too big. And it was often the case! There's too much going on in Decred and in the crypto space.
 - I couldn't imagine what the [index](https://xaur.github.io/decred-news/) of all issues and translations would look like in 2 years!
+- After pioneering the use of Git and GitHub for DJ I began to annoy pretty much everyone in the community to do the same for other documents. I believe that knowledge preservation is [important](https://github.com/xaur/decred-news/blob/docs/guidelines.md#why-git) and will keep annoying you guys. Thank you for your patience.
 - About 6 months after starting DJ I began to worry about decreasing Reddit upvotes. I talked to people and learned two things. First is that people who've been here for years told me it is common: humans get less sensitive to any stimulus over time, even high quality one. Second is that I don't know these people who leave likes. But people I do know, talk to every day, people with most intelligence and wisdom, people I care about most and who are the reason why I'm still here, keep telling me I'm doing a good job. And they keep doing their job for years. So I asked myself, why do I care about these unknown people more than I care what the best people around me think? It doesn't make sense! So I stopped worrying about that. (No offense to any DJ readers!)
 - We received a lot of positive [feedback](https://xaur.github.io/decred-news/testimonials.html) over these two years. We don't write DJ for praise, but kind words let us know that we're still on the right track. Thank you all!
 
