--- a/journal/202003.md
+++ b/journal/202003.md
@@ -299,11 +299,11 @@ Selected Twitter discussions:
 
 ## Markets
 
-In March DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
+In March DCR was trading between USD 8.68-19.78 / BTC 0.0017-0.0021. The average daily rate was $13.40.
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
-On Mar 7 BTC/USD started its decline from $9,100 mark down to $7,800 on Mar 11. Following the global stock market crash and the wave of coronavirus panic on that week, BTC/USD tanked on Mar 12 with a bottom of ~$5,600. Most cryptoassets lost around 40% that day, demonstrating their persisting dependence on BTC and the mostly speculative price levels. This dump took DCR/USD with it down to $10.8. {update numbers}
+On Mar 7 BTC/USD started its decline from $9,100 mark down to $7,800 on Mar 11. Following the global stock market crash and the wave of coronavirus panic on that week, BTC/USD tanked on Mar 12 with a bottom of ~$5,600. Most cryptoassets lost around 40% that day, demonstrating their persisting dependence on BTC and the mostly speculative price levels. This dump took DCR/USD with it down to $8.68. {update numbers}
 
 exchanges decopupling https://twitter.com/HsakaTrades/status/1239227306863820801
 
